<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Look for the answer</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_register">Register</string>
    <string name="title_activity_register">Register new profile</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_activity_list">ActivityList</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password2">Confirm password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_lastname">Last name</string>
    <string name="prompt_phoneNumber">Phone number</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_createProfile">Create profile</string>
    <string name="action_sign_in_short">Sign in SHORT TEST</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_username_already_taken">Username is already taken</string>
    <string name="error_invalid_to_short_password">This password is too short</string>
    <string name="error_invalid_password2">Confirm password is not correct</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="text_imageLabel">Select avatar</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_show_hide_friends">Show/Hide friends</string>
    <string name="action_show_categories">Show all categories</string>
    <string name="action_search_category">Search categories</string>
    <string name="hint_longitude">Longitude</string>
    <!--<string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>-->
    <string name="questionQ">Question</string>
    <string name="correct_answerQ">Correct answer</string>
    <string name="wrong_answerQ">Wrong answer</string>
    <string name="next_questionQ">Next question</string>
    <string name="post_questionQ">Post question</string>
    <string name="number_of_questionQ">Number of question</string>
    <string-array name="spinner_item">
        <item>Select category</item>
        <item>Culture</item>
        <item>Cuisine</item>
        <item>Geography</item>
        <item>History</item>
        <item>Sport</item>
    </string-array>

    <string name="spinner_culture">Culture</string>
    <string name="spinner_cuisine">Cuisine</string>
    <string name="spinner_geography">Geography</string>
    <string name="spinner_history">History</string>
    <string name="spinner_sport">Sport</string>
    <string name="button_searchTxt">Search</string>
    <string name="radiusTxt">Radius (0-1000m)</string>
    <string name="search_username">Username who created category</string>
    <string name="title_activity_bluetooth">BluetoothActivity</string>


    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">Connecting...</string>
    <string name="title_connected_to">Connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">Not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">Scanning for devices...</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
