<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="mosis.projekat.SearchActivity"
    tools:showIn="@layout/activity_search">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Select category"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

        <CheckBox android:id="@+id/checkbox_culture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spinner_culture"
            />
        <CheckBox android:id="@+id/checkbox_cuisine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spinner_cuisine"
            />

        <CheckBox android:id="@+id/checkbox_geography"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spinner_geography"
            />
        <CheckBox android:id="@+id/checkbox_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spinner_history"
            />
        <CheckBox android:id="@+id/checkbox_sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spinner_sport"
            />

        <EditText
            android:id="@+id/radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/radiusTxt"
            android:inputType="number"
            android:textAlignment="center"
            android:maxLines="1"
            android:singleLine="true"
            android:maxLength="4"
            />

        <EditText
            android:id="@+id/search_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_username"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/search_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/button_searchTxt"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
