<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center_vertical|center_horizontal">

    <ProgressBar
        android:id="@+id/question_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/question_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_category"
            android:entries="@array/spinner_item"
            android:textAlignment="center"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp" />

        <!--<View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:id="@+id/line_top"
            android:background="@android:color/black"/>-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/question_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/number_of_questionQ"
                android:inputType="number"
                android:textAlignment="center"
                android:maxLines="1"
                android:singleLine="true"
                android:maxLength="1"
                />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/line_buttom"
            android:background="@android:color/black"/>

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="1/5 question"
            android:id="@+id/question_status"
            android:layout_gravity="center_horizontal" />-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/questionQ"
                android:inputType="textMultiLine"
                android:maxLines="20"
                android:lines="3"
                android:scrollbars="vertical"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/correct_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correct_answerQ"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/wrong_answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/wrong_answerQ"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/wrong_answer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/wrong_answerQ"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/wrong_answer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/wrong_answerQ"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/next_question"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/next_questionQ"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>

</LinearLayout>